Wfahle/ast (#8)
* Fixed up some ast things

* Finished AST and visitor

* Upgraded gradle so we can debug

* Fixed warnings

* Documentation for invalid source release error fix

* Fixed some deprecations

* Fixed deprecation issues

---------

Co-authored-by: amenezes-pc <amenezes@phasechange.ai>